[package]
name = "memmesh"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Official Rust SDK for MemMesh — memory + prediction for AI agents."
license = "Apache-2.0"
repository = "https://github.com/ThinkfleetAI/memmesh-rust"
homepage = "https://memmesh.ai"
documentation = "https://docs.rs/memmesh"
keywords = ["ai", "agents", "memory", "llm", "memmesh"]
categories = ["api-bindings"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
